@@ -1,11 +1,9 @@
 
 
-search forward/back checkbox
-
-
 window subclass ?
 
 global tools
+
 
 
 
